# finance-tracker

./: .gitignore  Makefile  README.md  app.py  setup.cfg
.streamlit/: config.toml
ai/: agent.py  prompts.py  tools.py
ai/tools/: __init__.py  date_tools.py  expense_tools.py  income_tools.py  summary_tools.py
analysis/: analysis.py
app/: app.py
app/components/: expense_form.py
app/db/: finance_tracker.db
app/expenses/: expense_input.py  income_input.py
app/finance/: dashboard.py  expense_input.py  income_input.py
app/resources/: contants.py
app/utils/: db_utils.py  expense_utils.py  income_utils.py  session_state_utils.py  utils.py
fin_app/: manage.py
fin_app/fin_app/: asgi.py  expenses.py  settings.py  urls.py  wsgi.py
finance/: dashboard.py  expense_input.py  income_input.py
pages/finance/: expense_input.py  finance_dashboard.py
resources/: constants.py
scripts/: migrate_sqlite_to_json.py
tabs/analysis/: analysis_agents.py  analysis_dashboard.py  analysis_tools.py
tabs/finance/: expense_input.py  finance_dashboard.py  income_input.py
tabs/trading/: trading_dashboard.py
utils/: ai_utils.py  db_utils.py  expense_utils.py  income_utils.py  json_utils.py  session_state_utils.py
