[metadata]
name = finance_tracker
description = Python app for tracking finances
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.1.0
author = Nathaniel Goh
url = https://github.com/nathgoh/finance-tracker

[options]
packages = find:
python_requires = >=3.12
install_requires =
    pandas==2.2.3
    numpy==2.2.6
    streamlit
    ruff
    plotly
    ollama
    watchdog
    sqlalchemy
    smolagents[openai]
[options.package_data]
* = README.md